--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Lobby_Test.loader.js";
+      var loaderUrl = buildUrl + "/TemplateData.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Lobby_Test.data.gz",
-        frameworkUrl: buildUrl + "/Lobby_Test.framework.js.gz",
-        codeUrl: buildUrl + "/Lobby_Test.wasm.gz",
+        dataUrl: buildUrl + "/TemplateData.data.gz",
+        frameworkUrl: buildUrl + "/TemplateData.framework.js.gz",
+        codeUrl: buildUrl + "/TemplateData.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Sunny",
         productName: "Trickcal_LobbyTest",
-        productVersion: "0.1",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
