--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         frameworkUrl: "Build/Lobby_Test.framework.js.gz",
         codeUrl: "Build/Lobby_Test.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Sunny",
+        companyName: "DefaultCompany",
         productName: "Trickcal_LobbyTest",
-        productVersion: "1.1",
+        productVersion: "1.2",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
